fix SpringConfigurationXSDGeneratingAnnotationProcessor #2178 (#2195)
* implement error for duplicate setters

* add error for attribute - childelement name clash

* Validate and enforce unique element/attribute/child names and detect clashes

- Replace old uniqueness check with getUniquenessError(ElementInfo, MainInfo)
- Collect named groups (attributes, textContent, child elements) and check duplicates per-group
- Detect name clashes across groups and report them
- Add helpers: NameGroup, collectNameGroups, group(), duplicates(), refined text/content handling
- Improve child element name handling (validate list declarations, throw ProcessingException on duplicate child names)
- Remove noisy debug/legacy checks and integrate uniqueness checks into main processing loop
- Update example proxies.yaml to include ssl.key.private placeholder

* minor improvements

* Refine element processing logic and add top-level MCElement filter for `java.lang.Object` assignments.

* Simplify conditional logic in `SpringConfigurationXSDGeneratingAnnotationProcessor` for element processing.

---------

Co-authored-by: Tobias Polley <polley@predic8.de>